# swarm.cpp

./: .gitignore  CMakeLists.txt  README.md  agents.h  http_client.cpp  http_client.h  main.cpp  swarm.hpp  types.h  util.h  utils.h
ROS/src/swarm_agents/: CMakeLists.txt  package.xml
ROS/src/swarm_agents/config/: chatgpt.yaml  ollama.yaml
ROS/src/swarm_agents/include/: common_lib.hpp  json_convert.hpp
ROS/src/swarm_agents/include/agent/: agents.h
ROS/src/swarm_agents/include/impl/: swarm_impl.hpp
ROS/src/swarm_agents/include/swarm_agents/: swarm.hpp  swarm_ros.hpp
ROS/src/swarm_agents/include/utils/: utils.h
ROS/src/swarm_agents/launch/: swarm_gpt_agent.launch.py  swarm_ollama_agent.launch.py
ROS/src/swarm_agents/src/: http_client.cpp  swarm_agent_node.cpp  swarm_ros.cpp
examples/: CMakeLists.txt  agent_handoff.cpp  base_agent.cpp  dynamic_agent.cpp  function_calling.cpp  openai_cpp_usage.cpp  use_database.cpp  weather_agent.cpp
include/: http_client.h
tests/: base_tests.cpp
tests/.ipynb_checkpoints/: util_test-checkpoint.cpp
